[package]
name = "carballrs"
version = "0.1.0"
authors = ["Mark J <ima9rd@gmail.com>"]

[dependencies]
reqwest = "0.9.5"
serde_json = "1.0.33"
serde_derive = "1.0.80"
serde = "1.0.80"
glob = "0.2.11"
version-compare = "0.0.6"
protoc-rust = { git = "https://github.com/stepancheg/rust-protobuf.git" }
protobuf = {path = "C:/Users/M-PC/Desktop/rust-protobuf/protobuf", version = "3.0.0"}